# K-mer

./: CMakeLists.txt  README.md  main.cpp  test.txt  test2.txt
files/: armadillo_counts_dumps.fa  baboon_counts_dumps.fa  chicken_counts_dumps.fa  file10  file11  file12  file13  file14  file15  file16  file17  file18  file19  file20  file21  file22  file23  file24  file25  file26  file27  file28  file29  file30  file31  file32  file33  file34  file35  file36  file37  file38  file39  file40  file41  file42  file43  file44  file45  file46  (+21 more)
files/Data10/: armadillo_counts.jf  armadillo_counts_dumps.fa  baboon_counts.jf  baboon_counts_dumps.fa  cat_counts.jf  cat_counts_dumps.fa  chicken_counts.jf  chicken_counts_dumps.fa  chimp_counts.jf  chimp_counts_dumps.fa  clouded_leopard_counts.jf  clouded_leopard_counts_dumps.fa  colobus_monkey_counts.jf  colobus_monkey_counts_dumps.fa  cow_counts.jf  cow_counts_dumps.fa  cpbat_counts.jf  cpbat_counts_dumps.fa  dog_counts.jf  dog_counts_dumps.fa  dusky_titi_counts.jf  dusky_titi_counts_dumps.fa  elephant_counts.jf  elephant_counts_dumps.fa  ferret_counts.jf  ferret_counts_dumps.fa  fugu_counts.jf  fugu_counts_dumps.fa  galago_counts.jf  galago_counts_dumps.fa  gibbon_counts.jf  gibbon_counts_dumps.fa  gorilla_counts.jf  gorilla_counts_dumps.fa  guinea_pig_counts.jf  guinea_pig_counts_dumps.fa  heagehog_counts.jf  heagehog_counts_dumps.fa  horse_counts.jf  horse_counts_dumps.fa  (+50 more)
files/Data11/: armadillo_counts.jf  armadillo_counts_dumps.fa  baboon_counts.jf  baboon_counts_dumps.fa  cat_counts.jf  cat_counts_dumps.fa  chicken_counts.jf  chicken_counts_dumps.fa  chimp_counts.jf  chimp_counts_dumps.fa  clouded_leopard_counts.jf  clouded_leopard_counts_dumps.fa  colobus_monkey_counts.jf  colobus_monkey_counts_dumps.fa  cow_counts.jf  cow_counts_dumps.fa  cpbat_counts.jf  cpbat_counts_dumps.fa  dog_counts.jf  dog_counts_dumps.fa  (+68 more)
headers/: phylogenetic_tree.h  species.h  utilities.h
src/: TestMain.cpp  dist_matrix.cpp  neighbour_joining.cpp  phylogenetic_tree.cpp  rf.cpp  species.cpp  utilities.cpp
(+4846 files in other folders)
